Add streamlit dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "seaborn>=0.13.2",
     "shapely>=2.1.2",
     "sqlalchemy>=2.0.45",
+    "streamlit>=1.52.2",
     "wordcloud>=1.9.5",
 ]
 
