--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "folium>=0.20.0",
     "geopandas>=1.1.2",
     "huggingface-hub>=1.3.1",
+    "kaleido>=1.2.0",
     "kiwipiepy>=0.22.2",
     "mapclassify>=2.10.0",
     "matplotlib>=3.10.8",
